# go-microservice-template

./: .gitignore  BUILD  BUILD.bazel  Dockerfile  Makefile  README.md  Tiltfile  WORKSPACE  WORKSPACE.bazel  buf.gen.yaml  go.mod  go.sum  go_dependencies.bzl  go_deps.bzl  tools.go
.github/workflows/: bazel.yml  docker-image.yml  go.yml  push.yml
api/proto/healthz/: BUILD  BUILD.bazel  dummy.go  gen.go  healthz.pb.go  healthz.pb.gw.go  healthz.proto  healthz.swagger.json  healthz_grpc.pb.go
api/proto/server/: BUILD  BUILD.bazel  dummy.go  gen.go  server.pb.go  server.pb.gw.go  server.proto  server.swagger.json  server_grpc.pb.go
cmd/server/: BUILD  BUILD.bazel  main.go
container/: BUILD  BUILD.bazel
internal/handler/echoserver/: BUILD  BUILD.bazel  echoserver.go  echoserver_test.go
internal/handler/healthz/: BUILD  healthz.go
k8s/: BUILD  deployment.jsonnet  deployment.yaml  k8s.libsonnet
pkg/echoserver/: BUILD.bazel  echoserver.go
pkg/handler/echoserver/: echoserver.go
pkg/server/: logging.go  metrics.go  server.go  tracing.go
pkg/service/: BUILD.bazel  init.go  logging.go  metrics.go  server.go  tracing.go
tools/: gopackagesdriver.sh  tools.go
