load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/cloneable/go-microservice-template/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//api/proto/healthz",
        "//api/proto/server",
        "//internal/handler/echoserver",
        "//internal/handler/healthz",
        "//pkg/service",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)
