load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "echoserver",
    srcs = ["echoserver.go"],
    importpath = "github.com/cloneable/go-microservice-template/pkg/echoserver",
    visibility = ["//visibility:public"],
    deps = [
        "//api/proto/server",
        "@com_github_golang_glog//:glog",
    ],
)
